# real-estate-hybrid-app

./: .env  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  dvc.yaml  params.yaml  promote_model.py  pyproject.toml  requirements-dev.txt  requirements-docker.txt
.github/workflows/: ci-cd.yaml
audit/: predictions.csv
data/raw/: .gitignore  real_estate.csv.dvc
deploy/scripts/: install_dependencies.sh  setup_backup.sh  start_docker.sh
docs/: mkdocs.yml
docs/docs/: index.md
models/: .gitignore
my_app/pages/: Analysis_App.py  Price_Predictor.py
notebooks/: LightGBM_hp_tuning.ipynb  baseline_model.ipynb  dp_hp_tuning.ipynb  eda_helper_functions.py  locality_fix.ipynb  missing_values_imputation.ipynb  model_selection.ipynb  preliminary_data_cleaning.ipynb  stacking_regression_hp_tuning.ipynb
notebooks/scraping_realestate_data/: extraction.py  webscraping.ipynb  webscraping_api.ipynb
src/: __init__.py  data_preparation.py  data_preprocessing.py  dataset.py  features.py  plots.py
src/modeling/: evaluation.py  predict.py  train.py
tests/: test_model_perf.py  test_model_registry.py
